// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`every() should fail when at least one item is not a string 1`] = `
Object {
  "message": "Every value should follow the rule: Value should be a string",
  "path": Array [],
  "requirement": Object {
    "message": "Value should be a string",
    "path": Array [
      "1",
    ],
    "type": "single",
    "value": 1,
  },
  "type": "dependence",
  "value": Array [
    "first",
    1,
    "last",
  ],
}
`;

exports[`every() should support custom message 1`] = `
Object {
  "message": "Custom message",
  "path": Array [],
  "requirement": Object {
    "message": "Value should be a string",
    "path": Array [
      "0",
    ],
    "type": "single",
    "value": 1,
  },
  "type": "dependence",
  "value": Array [
    1,
    "test",
  ],
}
`;
